--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@polyphorm/eslint-config",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -15,7 +15,7 @@
     "url": "https://github.com/Polyphorm/PolyphormESLintConfig/issues"
   },
   "homepage": "https://github.com/Polyphorm/PolyphormESLintConfig#readme",
-  "devDependencies": {
+  "dependencies": {
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-node": "^11.0.0",
